Moved two plone themes to plone skins section

--- a/themes.cfg
+++ b/themes.cfg
@@ -2,9 +2,7 @@
 
 auto-checkout =
 ################# Diazo Themes
-    canaima.aponwaotheme
     canaimagnulinux.web.theme
-    ploneedu.theme
     plonetheme.amherst
     plonetheme.aqueouslight
     plonetheme.armadillotec
@@ -106,6 +104,8 @@ auto-checkout =
 
 ################# Plone Theme Skins
     plonetheme.aclark_twitter
+    canaima.aponwaotheme
+    ploneedu.theme
     plonetheme.drupal
 
 
@@ -235,10 +235,8 @@ zcml =
 # Put your mr.developer managed source code repositories here, see
 # https://pypi.org/project/mr.developer for details on format for this part
 [sources]
-################# Generic Diazo themes
-canaima.aponwaotheme = git https://github.com/CanaimaGNULinux/canaima.aponwaotheme.git
+################# Diazo Themes
 canaimagnulinux.web.theme = git https://github.com/CanaimaGNULinux/canaimagnulinux.web.theme.git
-ploneedu.theme = git https://github.com/collective/ploneedu.theme.git
 plonetheme.amherst = git https://github.com/collective/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
@@ -344,6 +342,8 @@ example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
 
 ################# Plone Theme Skins
 plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
+canaima.aponwaotheme = git https://github.com/CanaimaGNULinux/canaima.aponwaotheme.git
+ploneedu.theme = git https://github.com/collective/ploneedu.theme.git
 plonetheme.drupal = git https://github.com/plone-ve/plonetheme.drupal.git
 
 
