Fixed somes typo

--- a/themes.cfg
+++ b/themes.cfg
@@ -82,6 +82,8 @@ auto-checkout =
 #    diazotheme.framework.wirefy
 #    diazotheme.framework.yaml4
 
+
+################# Diazo Framework Themes
     diazotheme.amazium
     diazotheme.baseline
     diazotheme.bootstrap
@@ -164,7 +166,7 @@ eggs =
     quintagroup.theme.whiteblack
 
 
-################# Diazo theme with CSS Framework
+################# Diazo Theme with CSS Framework
     vs.bootstrap.tinymce
 
 
@@ -220,7 +222,7 @@ eggs =
 #    uwosh.mobile.tools
 
 zcml =
-################# Diazo Themes
+################# Plone Theme Skins
     canaima.aponwaotheme
 
 
