New sections for the themes buildout configurations

--- a/themes.cfg
+++ b/themes.cfg
@@ -99,11 +99,6 @@ auto-checkout =
 #    diazotheme.startup
 
 
-################# Pre-processor CSS Less
-    collective.lesscss
-    example.bootstrap
-
-
 ################# Plone Theme Skins
     plonetheme.aclark_twitter
     canaima.aponwaotheme
@@ -123,13 +118,24 @@ auto-checkout =
     plonetheme.zopeorg
 
 
-################# Theming Tools
+################# Deco Grid System for Plone
+    kombinat.decogrid
+
+
+################# Web Fonts Tools
     collective.fontawesome
     medialog.googlefonts
     medialog.controlpanel
+
+
+################# Pre-processor CSS Less
+    collective.lesscss
+    example.bootstrap
+
+
+################# Theming Tools
     Products.Doormat
     collective.megadrop
-    kombinat.decogrid
 
 
 ################# Slider tools
@@ -138,10 +144,6 @@ auto-checkout =
 
 ################# Plone True Gallery
 #    collective.js.supersized
-
-
-################# jQuery.ui's ThemeRoller Theming Tools
-    zettwerk.ui
 
 
 ################# jQueryMobile's ThemeRoller Theming Tools
@@ -153,6 +155,10 @@ auto-checkout =
     medialog.mobilethemeOne
     medialog.mobilethemeTwo
     medialog.mobilethemeThree
+
+
+################# jQuery.ui's ThemeRoller Theming Tools
+    zettwerk.ui
 
 
 eggs = 
@@ -176,6 +182,9 @@ eggs =
     collective.behavior.localskin
     openmultimedia.headband
     Products.ContentWellPortlets
+
+
+################# Menu Tools
     webcouturier.dropdownmenu
 
 
@@ -309,9 +318,6 @@ diazoframework.goldilocks = git https://github.com/plone-ve/diazoframework.goldi
 diazoframework.kube = git https://github.com/plone-ve/diazoframework.kube.git
 diazoframework.purecss = git https://github.com/plone-ve/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/plone-ve/diazoframework.skeleton.git
-
-
-################# Others CSS Framework as Diazo resources
 #diazotheme.frameworks = git https://github.com/TH-code/diazotheme.frameworks.git
 diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framework.cascade.git
 #diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
@@ -321,7 +327,7 @@ diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framew
 #diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 
 
-################# Diazo theme with CSS Framework
+################# Diazo Framework Themes
 diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
 diazotheme.baseline = git https://github.com/plone-ve/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
@@ -335,11 +341,6 @@ diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
 diazotheme.purecss = git https://github.com/plone-ve/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/plone-ve/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
-
-
-################# Pre-processor CSS Less
-collective.lesscss = git https://github.com/collective/collective.lesscss.git
-example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
 
 
 ################# Plone Theme Skins
@@ -361,14 +362,28 @@ plonetheme.unam = git https://github.com/plone-ve/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/plone-ve/plonetheme.zopeorg.git
 
 
-################# Theming Tools
+################# Deco Grid System for Plone
+kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
+
+
+################# Web Fonts Tools
 collective.fontawesome = git https://github.com/collective/collective.fontawesome.git
 medialog.googlefonts = git https://github.com/collective/medialog.googlefonts.git
 medialog.controlpanel = git https://github.com/plone-ve/medialog.controlpanel.git
+
+
+################# Pre-processor CSS Less
+collective.lesscss = git https://github.com/collective/collective.lesscss.git
+example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
+
+
+################# Theming Tools
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
-collective.megadrop = git https://github.com/collective/collective.megadrop.git
-kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
+
+
+################# Menu Tools
+collective.megadrop = git https://github.com/collective/collective.megadrop.git
 
 
 ################# Plone True Gallery
@@ -383,10 +398,6 @@ collective.easyslider = git https://github.com/collective/collective.easyslider.
 ftw.slider = git https://github.com/plone-ve/ftw.slider.git
 
 
-################# jQuery.ui's ThemeRoller Theming Tools
-zettwerk.ui = git https://github.com/collective/zettwerk.ui.git
-
-
 ################# jQueryMobile's ThemeRoller Theming Tools
 zettwerk.mobile = git https://github.com/collective/zettwerk.mobile.git
 
@@ -396,3 +407,7 @@ zettwerk.mobiletheming = git https://github.com/collective/zettwerk.mobilethemin
 medialog.mobilethemeOne = git https://github.com/plone-ve/medialog.mobilethemeOne.git
 medialog.mobilethemeTwo = git https://github.com/plone-ve/medialog.mobilethemeTwo.git
 medialog.mobilethemeThree = git https://github.com/plone-ve/medialog.mobilethemeThree.git
+
+
+################# jQuery.ui's ThemeRoller Theming Tools
+zettwerk.ui = git https://github.com/collective/zettwerk.ui.git
