New order for sections

--- a/themes.cfg
+++ b/themes.cfg
@@ -63,6 +63,10 @@ auto-checkout =
     plonetheme.onegov
 
 
+################# Deco Grid System for Plone
+    kombinat.decogrid
+
+
 ################# Diazo Framework resources for CSS Frameworks
     diazoframework.plone
     diazoframework.amazium
@@ -103,23 +107,16 @@ auto-checkout =
     plonetheme.aclark_twitter
     canaima.aponwaotheme
     ploneedu.theme
+    plonetheme.changecenter
     plonetheme.drupal
+    plonetheme.unam
+    plonetheme.zopeorg
 
 
 ################# Quintagroup Themes - Skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
     quintagroup.theme.pythonreel
-
-
-################# Custom Diazo Themes
-    plonetheme.changecenter
-    plonetheme.unam
-    plonetheme.zopeorg
-
-
-################# Deco Grid System for Plone
-    kombinat.decogrid
 
 
 ################# Web Fonts Tools
@@ -135,6 +132,9 @@ auto-checkout =
 
 ################# Theming Tools
     Products.Doormat
+
+
+################# Menu Tools
     collective.megadrop
 
 
@@ -172,7 +172,7 @@ eggs =
     quintagroup.theme.whiteblack
 
 
-################# Diazo Theme with CSS Framework
+################# Twitter Bootstrap CSS Framework
     vs.bootstrap.tinymce
 
 
@@ -308,6 +308,10 @@ seantis.web = git https://github.com/plone-ve/seantis.web.git
 plonetheme.onegov = git https://github.com/plone-ve/plonetheme.onegov.git
 
 
+################# Deco Grid System for Plone
+kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
+
+
 ################# Diazo Framework resources for CSS Frameworks
 diazoframework.plone = git https://github.com/plone-ve/diazoframework.plone.git
 diazoframework.amazium = git https://github.com/plone-ve/diazoframework.amazium.git
@@ -347,23 +351,16 @@ diazotheme.skeleton = git https://github.com/plone-ve/diazotheme.skeleton.git
 plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
 canaima.aponwaotheme = git https://github.com/CanaimaGNULinux/canaima.aponwaotheme.git
 ploneedu.theme = git https://github.com/collective/ploneedu.theme.git
+plonetheme.changecenter = git https://github.com/collective/plonetheme.changecenter.git
 plonetheme.drupal = git https://github.com/plone-ve/plonetheme.drupal.git
+plonetheme.unam = git https://github.com/plone-ve/plonetheme.unam.git
+plonetheme.zopeorg = git https://github.com/plone-ve/plonetheme.zopeorg.git
 
 
 ################# Quintagroup Themes - Skins
 quintagroup.theme.sunrain = git https://github.com/plone-ve/quintagroup.theme.sunrain.git
 quintagroup.theme.schools = git https://github.com/plone-ve/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/plone-ve/quintagroup.theme.pythonreel.git
-
-
-################# Custom Diazo Themes
-plonetheme.changecenter = git https://github.com/collective/plonetheme.changecenter.git
-plonetheme.unam = git https://github.com/plone-ve/plonetheme.unam.git
-plonetheme.zopeorg = git https://github.com/plone-ve/plonetheme.zopeorg.git
-
-
-################# Deco Grid System for Plone
-kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
 
 
 ################# Web Fonts Tools
