Enabled the allow-picked-versions settings for buildout configuration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,9 +19,11 @@ unzip = true
 #
 newest = false
 
+# allow picked versions
+allow-picked-versions = true
+
 # show picked versions wherever we do an automatic choice
-#
-show-picked-versions = true
+#show-picked-versions = true
 
 versions = versions
 
@@ -32,7 +34,7 @@ extensions =
 extends =
     http://dist.plone.org/release/4.3-latest/versions.cfg
     themes.cfg
-#    versions.cfg
+    versions.cfg
 
 
 # If you change your Plone version, you'll also need to update
