Added minimal documentations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -120,11 +120,15 @@ input = inline:
     sys.setdefaultencoding('utf-8')
 
 
+# See https://pypi.org/project/zc.recipe.egg for
+# relevant details.
 [decogrid]
 recipe = zc.recipe.egg
 eggs = kombinat.decogrid
 
 
+# See https://pypi.org/project/zc.recipe.egg for
+# relevant details.
 [zopepy]
 recipe = zc.recipe.egg
 eggs = ${instance:eggs}
@@ -157,6 +161,8 @@ eggs =
     zopeskel.diazotheme
 
 
+# See https://pypi.org/project/zc.recipe.egg for
+# relevant details.
 [i18ndude]
 recipe = zc.recipe.egg
 unzip = true
