Added Diazo Framework Zopeskel package

--- a/themes.cfg
+++ b/themes.cfg
@@ -67,6 +67,10 @@ auto-checkout =
     kombinat.decogrid
 
 
+################# Diazo Framework Zopeskel
+#    zopeskel.diazotheme
+
+
 ################# Diazo Framework resources for CSS Frameworks
     diazoframework.plone
     diazoframework.amazium
@@ -310,6 +314,10 @@ plonetheme.onegov = git https://github.com/plone-ve/plonetheme.onegov.git
 
 ################# Deco Grid System for Plone
 kombinat.decogrid = git https://github.com/collective/kombinat.decogrid.git
+
+
+################# Diazo Framework Zopeskel
+zopeskel.diazotheme = git https://github.com/collective/zopeskel.diazotheme.git
 
 
 ################# Diazo Framework resources for CSS Frameworks
