Changed the URL repository for diazotheme.bootswatch package

--- a/themes.cfg
+++ b/themes.cfg
@@ -343,7 +343,7 @@ diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framew
 diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
 diazotheme.baseline = git https://github.com/plone-ve/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
-diazotheme.bootswatch = git https://github.com/plone-ve/diazotheme.bootswatch.git
+diazotheme.bootswatch = git https://github.com/collective/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
 diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.git
 diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.git
