Changed the URL repository for diazotheme.frameworks package

--- a/themes.cfg
+++ b/themes.cfg
@@ -330,7 +330,7 @@ diazoframework.goldilocks = git https://github.com/plone-ve/diazoframework.goldi
 diazoframework.kube = git https://github.com/plone-ve/diazoframework.kube.git
 diazoframework.purecss = git https://github.com/plone-ve/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/plone-ve/diazoframework.skeleton.git
-#diazotheme.frameworks = git https://github.com/TH-code/diazotheme.frameworks.git
+#diazotheme.frameworks = git https://github.com/collective/diazotheme.frameworks.git
 diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framework.cascade.git
 #diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
 #diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
