--- a/themes.cfg
+++ b/themes.cfg
@@ -82,26 +82,25 @@ auto-checkout =
     diazoframework.purecss
     diazoframework.skeleton
 
-#    diazotheme.frameworks
-    diazotheme.framework.cascade
-#    diazotheme.framework.gumby
-#    diazotheme.framework.ivory
-#    diazotheme.framework.metro
-#    diazotheme.framework.wirefy
-#    diazotheme.framework.yaml4
-
 
 ################# Diazo Framework Themes
+    diazotheme.plone
     diazotheme.amazium
     diazotheme.baseline
     diazotheme.bootstrap
     diazotheme.bootswatch
 #    diazotheme.default
     diazotheme.foundation
+    diazotheme.frameworks
+    diazotheme.framework.cascade
+#    diazotheme.framework.gumby
+#    diazotheme.framework.ivory
+#    diazotheme.framework.metro
+#    diazotheme.framework.wirefy
+#    diazotheme.framework.yaml4
     diazotheme.goldilocks
 #    diazotheme.initializr
     diazotheme.kube
-    diazotheme.plone
     diazotheme.purecss
     diazotheme.skeleton
 #    diazotheme.startup
@@ -330,26 +329,26 @@ diazoframework.goldilocks = git https://github.com/plone-ve/diazoframework.goldi
 diazoframework.kube = git https://github.com/plone-ve/diazoframework.kube.git
 diazoframework.purecss = git https://github.com/plone-ve/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/plone-ve/diazoframework.skeleton.git
-#diazotheme.frameworks = git https://github.com/collective/diazotheme.frameworks.git
-diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framework.cascade.git
-#diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
-#diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
-#diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
-#diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
-#diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 
 
 ################# Diazo Framework Themes
+diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
 diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
 diazotheme.baseline = git https://github.com/plone-ve/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
 diazotheme.bootswatch = git https://github.com/collective/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
 diazotheme.foundation = git https://github.com/plone-ve/diazotheme.foundation.git
+diazotheme.frameworks = git https://github.com/collective/diazotheme.frameworks.git
+diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framework.cascade.git
+#diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
+#diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
+#diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
+#diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
+#diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.git
 #diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
 diazotheme.kube = git https://github.com/plone-ve/diazotheme.kube.git
-diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
 diazotheme.purecss = git https://github.com/plone-ve/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/plone-ve/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
