Changed the URL repository for diazotheme.plone package

--- a/themes.cfg
+++ b/themes.cfg
@@ -332,7 +332,7 @@ diazoframework.skeleton = git https://github.com/plone-ve/diazoframework.skeleto
 
 
 ################# Diazo Framework Themes
-diazotheme.plone = git https://github.com/plone-ve/diazotheme.plone.git
+diazotheme.plone = git https://github.com/collective/diazotheme.plone.git
 diazotheme.amazium = git https://github.com/plone-ve/diazotheme.amazium.git
 diazotheme.baseline = git https://github.com/plone-ve/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/plone-ve/diazotheme.bootstrap.git
