--- a/themes.cfg
+++ b/themes.cfg
@@ -351,7 +351,7 @@ diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.gi
 diazotheme.kube = git https://github.com/plone-ve/diazotheme.kube.git
 diazotheme.purecss = git https://github.com/plone-ve/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/plone-ve/diazotheme.skeleton.git
-#diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
+#diazotheme.startup = git https://github.com/collective/diazotheme.startup.git
 
 
 ################# Plone Theme Skins
