--- a/themes.cfg
+++ b/themes.cfg
@@ -103,7 +103,7 @@ auto-checkout =
     diazotheme.kube
     diazotheme.purecss
     diazotheme.skeleton
-#    diazotheme.startup
+    diazotheme.startup
 
 
 ################# Plone Theme Skins
@@ -351,7 +351,7 @@ diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.gi
 diazotheme.kube = git https://github.com/plone-ve/diazotheme.kube.git
 diazotheme.purecss = git https://github.com/plone-ve/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/plone-ve/diazotheme.skeleton.git
-#diazotheme.startup = git https://github.com/collective/diazotheme.startup.git
+diazotheme.startup = git https://github.com/collective/diazotheme.startup.git
 
 
 ################# Plone Theme Skins
