--- a/themes.cfg
+++ b/themes.cfg
@@ -95,7 +95,7 @@ auto-checkout =
     diazotheme.framework.cascade
 #    diazotheme.framework.gumby
 #    diazotheme.framework.ivory
-#    diazotheme.framework.metro
+    diazotheme.framework.metro
 #    diazotheme.framework.wirefy
 #    diazotheme.framework.yaml4
     diazotheme.goldilocks
@@ -343,7 +343,7 @@ diazotheme.frameworks = git https://github.com/collective/diazotheme.frameworks.
 diazotheme.framework.cascade = git https://github.com/plone-ve/diazotheme.framework.cascade.git
 #diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
 #diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
-#diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
+diazotheme.framework.metro = git https://github.com/plone-ve/diazotheme.framework.metro.git
 #diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
 #diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 diazotheme.goldilocks = git https://github.com/plone-ve/diazotheme.goldilocks.git
