Added the htwkimn.theme package

--- a/themes.cfg
+++ b/themes.cfg
@@ -61,6 +61,7 @@ auto-checkout =
     seantis.web
 #    collective.blogging
     plonetheme.onegov
+    htwkimn.theme
 
 
 ################# Deco Grid System for Plone
@@ -309,6 +310,7 @@ collective.js.foundation = git https://github.com/toutpt/collective.js.foundatio
 seantis.web = git https://github.com/plone-ve/seantis.web.git
 #collective.blogging = git https://github.com/collective/collective.blogging.git
 plonetheme.onegov = git https://github.com/plone-ve/plonetheme.onegov.git
+htwkimn.theme = git https://github.com/lkosubek/htwkimn.theme.git
 
 
 ################# Deco Grid System for Plone
