Updated buildout configurations

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,8 +33,8 @@ extensions =
 
 extends =
     http://dist.plone.org/release/4.3-latest/versions.cfg
-    themes.cfg
     versions.cfg
+    themes.cfg
 
 
 # If you change your Plone version, you'll also need to update
@@ -168,8 +168,11 @@ recipe = zc.recipe.egg
 unzip = true
 eggs = i18ndude
 
+
 # The following part definition lists the versions picked:
 [versions]
+transaction = 2.2.1
+
 # buildout base
 setuptools = 26.1.1
 zc.buildout = 1.7.1
@@ -185,7 +188,8 @@ sauna.reload = 0.5.5
 plone.app.debugtoolbar = 1.1.4
 
 # Chameleon
-Chameleon = 2.13
+#Chameleon = 2.13
+Chameleon = 3.2
 experimental.btree = 1.1
 five.pt = 2.2.1
 sourcecodegen = 0.6.14
