--- a/versions.cfg
+++ b/versions.cfg
@@ -1,4 +1,38 @@
+# The following part definition lists the versions picked:
 [versions]
+transaction = 2.2.1
+
+# buildout base
+setuptools = 26.1.1
+zc.buildout = 1.7.1
+pytz = 2018.4
+docutils = 0.14
+
+# buildout extensions
+buildout.threatlevel = 1.1
+
+# development base
+i18ndude = 4.4.0
+sauna.reload = 0.5.5
+plone.app.debugtoolbar = 1.1.4
+
+# Chameleon
+#Chameleon = 2.13
+Chameleon = 3.2
+experimental.btree = 1.1
+five.pt = 2.2.1
+sourcecodegen = 0.6.14
+z3c.pt = 2.2.3
+
+# ZopeSkel
+ZopeSkel = 2.21.2
+Cheetah = 2.2.1
+toutpt.zopeskel = 1.3.3
+vs.zopeskel.diazo = 1.0
+zopeskel.diazochildtheme = 0.1
+zopeskel.diazotheme = 1.1
+
+
 ################# Diazo Themes
 plonetheme.plumigreen =
 
@@ -88,7 +122,8 @@ collective.js.galleria = 1.2.5
 
 # Required by:
 # collective.cover==1.0a9
-plone.api = 1.2.1
+#plone.api = 1.2.1
+plone.api = 1.3.2
 
 # Required by:
 # collective.cover==1.0a9
@@ -190,7 +225,8 @@ ftw.mobilenavigation = 1.4.1
 
 # Required by:
 # ftw.mobilenavigation==1.4.1
-ftw.upgrade = 1.10.0
+#ftw.upgrade = 1.10.0
+ftw.upgrade = 2.11.1
 
 # Required by:
 # ftw.upgrade==1.10.0
