Updated sections from versions file

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -150,15 +150,17 @@ eggs = ${instance:eggs}
 [scripts]
 recipe = zc.recipe.egg
 eggs =
+################# Scaffolding
     ZopeSkel
     PasteScript
     PasteDeploy
     Paste
     toutpt.zopeskel
     vs.zopeskel.diazo
-    zest.releaser
     zopeskel.diazochildtheme
     zopeskel.diazotheme
+################# Release package
+    zest.releaser
 
 
 # See https://pypi.org/project/zc.recipe.egg for
