--- a/versions.cfg
+++ b/versions.cfg
@@ -2,21 +2,25 @@
 [versions]
 transaction = 2.2.1
 
-# buildout base
+
+################# Buildout base
 setuptools = 26.1.1
 zc.buildout = 1.7.1
 pytz = 2018.4
 docutils = 0.14
 
-# buildout extensions
+
+################# Buildout extensions
 buildout.threatlevel = 1.1
 
-# development base
+
+################# Development base
 i18ndude = 4.4.0
 sauna.reload = 0.5.5
 plone.app.debugtoolbar = 1.1.4
 
-# Chameleon
+
+################# Chameleon
 #Chameleon = 2.13
 Chameleon = 3.2
 experimental.btree = 1.1
@@ -24,13 +28,19 @@ five.pt = 2.2.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
 
-# ZopeSkel
+
+################# Scaffolding
 ZopeSkel = 2.21.2
+PasteScript = 1.7.5
 Cheetah = 2.2.1
 toutpt.zopeskel = 1.3.3
 vs.zopeskel.diazo = 1.0
 zopeskel.diazochildtheme = 0.1
 zopeskel.diazotheme = 1.1
+
+
+################# Release package
+zest.releaser = 6.13.4
 
 
 ################# Diazo Themes
