Renamed buildout script section to zopeskel

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -60,7 +60,7 @@ parts =
     decogrid
     zopepy
     omelette
-    scripts
+    zopeskel
     i18ndude
 
 
@@ -147,7 +147,7 @@ eggs = ${instance:eggs}
 
 # See https://pypi.org/project/zc.recipe.egg for
 # relevant details.
-[scripts]
+[zopeskel]
 recipe = zc.recipe.egg
 eggs =
 ################# Scaffolding
@@ -159,7 +159,6 @@ eggs =
     vs.zopeskel.diazo
     zopeskel.diazochildtheme
     zopeskel.diazotheme
-################# Release package
     zest.releaser
 
 
