--- a/versions.cfg
+++ b/versions.cfg
@@ -32,15 +32,20 @@ z3c.pt = 2.2.3
 ################# Scaffolding
 ZopeSkel = 2.21.2
 PasteScript = 1.7.5
-Cheetah = 2.2.1
+PasteDeploy = 1.3.4
+Paste = 1.7.5.1
 toutpt.zopeskel = 1.3.3
 vs.zopeskel.diazo = 1.0
 zopeskel.diazochildtheme = 0.1
 zopeskel.diazotheme = 1.1
-
-
-################# Release package
 zest.releaser = 6.13.4
+twine = 1.9.1
+six = 1.10.0
+colorama = 0.3.9
+Cheetah = 2.2.1
+requests_toolbelt = 0.8.0
+pkginfo = 1.4.2
+tqdm = 4.23.1
 
 
 ################# Diazo Themes
