Added the collective.sitelogo product #85

--- a/themes.cfg
+++ b/themes.cfg
@@ -136,6 +136,7 @@ auto-checkout =
 
 ################# Theming Tools
     Products.Doormat
+    collective.sitelogo
 
 
 ################# Menu Tools
@@ -385,6 +386,7 @@ example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
 
 ################# Theming Tools
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
+collective.sitelogo = git https://github.com/collective/collective.sitelogo.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
 
 
