Updated CSS Pre-Processing section

--- a/themes.cfg
+++ b/themes.cfg
@@ -129,9 +129,10 @@ auto-checkout =
     medialog.controlpanel
 
 
-################# Pre-processor CSS Less
+################# CSS Pre-Processing
     collective.lesscss
     example.bootstrap
+#    collective.scss
 
 
 ################# Theming Tools
@@ -379,9 +380,10 @@ medialog.googlefonts = git https://github.com/collective/medialog.googlefonts.gi
 medialog.controlpanel = git https://github.com/plone-ve/medialog.controlpanel.git
 
 
-################# Pre-processor CSS Less
+################# CSS Pre-Processing
 collective.lesscss = git https://github.com/collective/collective.lesscss.git
 example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
+#collective.scss = git https://github.com/collective/collective.scss.git
 
 
 ################# Theming Tools
