Added vs.bootstrap.tinymce development buildout configuration

--- a/themes.cfg
+++ b/themes.cfg
@@ -135,6 +135,10 @@ auto-checkout =
 #    collective.scss
 
 
+################# Twitter Bootstrap CSS Framework
+#    vs.bootstrap.tinymce
+
+
 ################# Theming Tools
     Products.Doormat
     collective.sitelogo
@@ -384,6 +388,10 @@ medialog.controlpanel = git https://github.com/plone-ve/medialog.controlpanel.gi
 collective.lesscss = git https://github.com/collective/collective.lesscss.git
 example.bootstrap = git https://github.com/sneridagh/example.bootstrap.git
 #collective.scss = git https://github.com/collective/collective.scss.git
+
+
+################# Twitter Bootstrap CSS Framework
+#vs.bootstrap.tinymce = git https://github.com/veit/vs.bootstrap.tinymce.git
 
 
 ################# Theming Tools
