Define new Javascript libraries section for buildout configs

--- a/themes.cfg
+++ b/themes.cfg
@@ -152,7 +152,7 @@ auto-checkout =
     ftw.slider
 
 
-################# Plone True Gallery
+################# Javascript libraries
 #    collective.js.supersized
 
 
@@ -234,6 +234,10 @@ eggs =
     collective.ptg.shufflegallery
     collective.ptg.thumbnailzoom
     collective.ptg.uigallery
+
+
+################# Javascript libraries
+    collective.js.galleria
     collective.js.supersized
 
 
@@ -404,8 +408,8 @@ collective.sitelogo = git https://github.com/collective/collective.sitelogo.git
 collective.megadrop = git https://github.com/collective/collective.megadrop.git
 
 
-################# Plone True Gallery
-#collective.js.supersized = git https://github.com/collective/collective.js.supersized.git
+################# Javascript libraries
+# collective.js.supersized = git https://github.com/collective/collective.js.supersized.git
 
 
 ################# Slider Tag
