--- a/versions.cfg
+++ b/versions.cfg
@@ -227,6 +227,10 @@ jarn.jsi18n = 1.1
 wildcard.foldercontents = 1.2.4
 
 
+################# Javascript libraries
+collective.js.supersized = 0.4.3
+
+
 ################# jQueryMobile's ThemeRoller Theming Tools
 zettwerk.mobile = 0.2.1
 
