Renamed from the 'Plone True Gallery' to the 'Gallery Tools' section

--- a/themes.cfg
+++ b/themes.cfg
@@ -203,7 +203,7 @@ eggs =
     collective.easytemplate
 
 
-################# Plone True Gallery
+################# Gallery Tools
     collective.plonetruegallery
     collective.ptg.allnewest
     collective.ptg.bootstrapcarousel
