--- a/versions.cfg
+++ b/versions.cfg
@@ -173,8 +173,7 @@ collective.easytemplate = 0.8.0
 collective.templateengines = 0.3.5
 
 
-################# Plone True Gallery
-collective.js.supersized = 0.4.3
+################# Gallery Tools
 collective.plonetruegallery = 3.3.2
 collective.ptg.allnewest = 1.2.6
 collective.ptg.bootstrapcarousel = 1.0.1
