--- a/themes.cfg
+++ b/themes.cfg
@@ -205,35 +205,35 @@ eggs =
 
 ################# Gallery Tools
     collective.plonetruegallery
-    collective.ptg.allnewest
+#    collective.ptg.allnewest
     collective.ptg.bootstrapcarousel
     collective.ptg.carousel
+    collective.ptg.contactsheet
     collective.ptg.contentflow
     collective.ptg.contentleadimage
-    collective.ptg.contactsheet
-    collective.ptg.easyslider
+#    collective.ptg.easyslider
     collective.ptg.fancybox
-    collective.ptg.flickr
+#    collective.ptg.flickr
     collective.ptg.galleria
-    collective.ptg.galleriffic
-    collective.ptg.galleryfolder
+#    collective.ptg.galleriffic
+#    collective.ptg.galleryfolder
     collective.ptg.galleryimage
-    collective.ptg.garagedoor
-    collective.ptg.highslide
-    collective.ptg.nivogallery
-    collective.ptg.nivoslider
-    collective.ptg.picasa
-    collective.ptg.pikachoose
-    collective.ptg.presentation
-    collective.ptg.quicksand
-    collective.ptg.s3slider
-    collective.ptg.simplegallery
-    collective.ptg.supersized
-    collective.ptg.sheetgallery
-    collective.ptg.scrollable
-    collective.ptg.shufflegallery
-    collective.ptg.thumbnailzoom
-    collective.ptg.uigallery
+#    collective.ptg.garagedoor
+#    collective.ptg.highslide
+#    collective.ptg.nivogallery
+#    collective.ptg.nivoslider
+#    collective.ptg.picasa
+#    collective.ptg.pikachoose
+#    collective.ptg.presentation
+#    collective.ptg.quicksand
+#    collective.ptg.s3slider
+#    collective.ptg.scrollable
+#    collective.ptg.sheetgallery
+#    collective.ptg.shufflegallery
+#    collective.ptg.simplegallery
+#    collective.ptg.supersized
+#    collective.ptg.thumbnailzoom
+#    collective.ptg.uigallery
 
 
 ################# Javascript libraries
