Changed the URL repository for plonetheme.pollination package

--- a/themes.cfg
+++ b/themes.cfg
@@ -284,7 +284,7 @@ plonetheme.leavesdew = git https://github.com/collective/plonetheme.leavesdew.gi
 plonetheme.motion = git https://github.com/plone-ve/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/plone-ve/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/plone-ve/plonetheme.pythonmexico.git
-plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
+plonetheme.pollination = git https://github.com/plone-ve/plonetheme.pollination.git
 plonetheme.plumigreen = git https://github.com/plone-ve/plonetheme.plumigreen.git
 plonetheme.unbound11 = git https://github.com/plone-ve/plonetheme.unbound11.git
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
